# trainos_tui

./: .env-example  Cargo.toml  README.md
src/: main.rs  protocol.rs
