[package]
name = "trainos_tui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = "desktop frontend for trainos"
repository = "https://github.com/MrPicklePinosaur/trainos_tui"

[features]

[dependencies]

serialport = { version = "4.2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
bincode = { version = "1.3" }

tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = { version = "0.20" }
